--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -17,14 +17,14 @@ $header-height: 80px;
 $header-logo-size: 3rem;
 $header-logo-color: #262626;
 $header-nav-size: 2rem;
-$header-border-color: rgba(0, 0, 0, .1);
+$header-border-color: rgba(0, 0, 0, 0.1);
 $header-text-color: #333;
 $header-bg-color: #fff;
 $header-hilite-color: #9e9e9e;
 $mobile-bg-color: #fafafa;
 $mobile-nav-thickness: 2px;
 $mobile-nav-distance: 10px;
-$mobile-nav-time: .2s;
+$mobile-nav-time: 0.2s;
 $mobile-nav-color: #333;
 $mobile-nav-size: 32px;
 
